--- a/package.json
+++ b/package.json
@@ -20,6 +20,19 @@
   },
   "homepage": "https://github.com/valeryvkrukov/docsafe-tt#readme",
   "devDependencies": {
-    "@symfony/webpack-encore": "^0.19.0"
+    "@symfony/webpack-encore": "^0.19.0",
+    "node-sass": "^4.8.3",
+    "sass-loader": "^6.0.7",
+    "webpack-notifier": "^1.6.0"
+  },
+  "dependencies": {
+    "@uirouter/angularjs": "^1.0.15",
+    "angular": "^1.6.9",
+    "angular-animate": "^1.6.9",
+    "angular-aria": "^1.6.9",
+    "angular-cookies": "^1.6.9",
+    "angular-material": "^1.1.8",
+    "angular-messages": "^1.6.9",
+    "ngstorage": "^0.3.11"
   }
 }
