simple login & registration added

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,17 +2,21 @@
 # https://symfony.com/doc/current/security.html
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        AppBundle\Entity\User: bcrypt
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
 
     providers:
-        in_memory:
-            memory:
-                users:
-                    user:  { password: password, roles: [ 'ROLE_USER' ] }
-                    admin: { password: password, roles: [ 'ROLE_ADMIN' ] }
+        api_provider:
+            entity:
+                class: AppBundle\Entity\User
+                property: username
+        #in_memory:
+        #    memory:
+        #        users:
+        #            user:  { password: password, roles: [ 'ROLE_USER' ] }
+        #            admin: { password: password, roles: [ 'ROLE_ADMIN' ] }
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -20,17 +24,20 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
+        register:
+            pattern: ^/api/sign-up
+            anonymous: true
+
         login:
             pattern: ^/api/login
             stateless: true
             anonymous: true
-            form_login:
+            json_login:
                 check_path: /api/login_check
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
                 require_previous_session: false
-                #username_parameter: username
-                #password_parameter: password
+            provider: api_provider
 
         api:
             pattern: ^/api
@@ -38,10 +45,12 @@ security:
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
+            provider: api_provider
 
         #main:
         #    anonymous: ~
 
     access_control:
-        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/sign-up$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
