--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -33,3 +33,8 @@ services:
     # AppBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+    app.user_password_listener:
+        class: AppBundle\Listener\PasswordEncodeListener
+        autowire: true
+        tags:
+            - { name: doctrine.event_subscriber }
