--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/valeryvkrukov/docsafe-tt#readme",
   "devDependencies": {
     "@symfony/webpack-encore": "^0.19.0",
+    "html-loader": "^0.5.5",
     "node-sass": "^4.8.3",
     "sass-loader": "^6.0.7",
     "webpack-notifier": "^1.6.0"
